<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.example.warmhome.MainActivity">
    <item
        android:id="@+id/cerrar_sesion"
        android:orderInCategory="3"
        android:title="@string/cerrar_sesion"
        app:showAsAction="never" />

    <item
        android:id="@+id/info_usuario"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="1"
        android:title="Info. de Usuario"
        app:showAsAction="never" />

    <item
        android:id="@+id/plano_casa"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="2"
        android:title="@string/plano_casa"
        app:showAsAction="never" />

    <item
        android:id="@+id/acercaDe"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="3"
        android:title="@string/acercaDe"
        app:showAsAction="never" />

</menu>
